	in src/wh/whcgipage.cpp'.
	* Added 'WHCgiPage::styleSheet()' and 'WHCgiPage::setStyleSheet()'
	methods in 'src/wh/whcgipage.cpp' and 'src/wh/whcgipage.h'.
2016-09-05 Fred Gleason <fredg@paravelsystems.com>
	* Removed superfluous include statements.
2016-09-05 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the library version to 5:0:2.
	* Incremented the package version to 1.1.0.
2016-09-14 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a typo in 'configure.ac'.
2016-09-14 Fred Gleason <fredg@paravelsystems.com>
	* Added 'Method::Put' and 'Method::Delete' values to the
	'WHHttpConnection::Method enumeration in 'src/wh/whhttpconnection.h'.
	* Added a 'WHHttpServer::getRequestReceived()' method in
	'src/wh/whhttpserver.cpp' and 'src/wh/whhttpserver.h'.
	* Added a 'WHHttpServer::postRequestReceived()' method in
	'src/wh/whhttpserver.cpp' and 'src/wh/whhttpserver.h'.
	* Added a 'WHHttpServer::headRequestReceived()' method in
	'src/wh/whhttpserver.cpp' and 'src/wh/whhttpserver.h'.
	* Added a 'WHHttpServer::putRequestReceived()' method in
	'src/wh/whhttpserver.cpp' and 'src/wh/whhttpserver.h'.
	* Added a 'WHHttpServer::deleteRequestReceived()' method in
	'src/wh/whhttpserver.cpp' and 'src/wh/whhttpserver.h'.
2016-09-16 Fred Gleason <fredg@paravelsystems.com>
	* Updated 'README'
	* Updated 'INSTALL'
	* Updated 'NEWS'
	* Incremented the library version to 6:0:3.
	* Incremented the package version to 1.2.0.
2016-10-22 Fred Gleason <fredg@paravelsystems.com>
	* Added code to append a pseudo-random integer to rendered script URLs
	in 'diff src/wh/whcgipage.cpp'.
2016-10-22 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the library version to 6:1:3.
	* Incremented the package version to 1.2.1.
2017-03-26 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'WHCgiPage::renderScripts() method.
2017-03-26 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the library version to 7:0:4.
	* Incremented the package version to 1.3.0.